<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_dialog_bg"
    android:gravity="center">

    <ImageView
        android:id="@+id/qrImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/uidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uid"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp" />

</LinearLayout>
