<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_mint_gradient">

        <!-- Center Guideline (50% split) -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <!-- Top Right Logo -->
        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/f8_small_logo"
            android:translationX="-10dp"
            android:translationY="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Mid-right blob -->
        <View
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/blob_lime"
            android:alpha="0.5"
            android:translationX="80dp"
            android:translationY="-100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <!-- Bottom blob -->
        <View
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:background="@drawable/blob_lime"
            android:alpha="0.6"
            android:translationX="140dp"
            android:translationY="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- ================= ENGLISH (TOP HALF) ================= -->

        <!-- English Headline -->
        <TextView
            android:id="@+id/tv_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:text="@string/main_tag"
            android:textColor="@color/text_dark_navy"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_subheading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <!-- English Subheading -->
        <TextView
            android:id="@+id/tv_subheading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:text="@string/sub_tag"
            android:textColor="@color/text_dark_navy"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_headline"
            app:layout_constraintBottom_toTopOf="@id/guideline_center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- ================= KANNADA (BOTTOM HALF) ================= -->

        <!-- Kannada Headline -->
        <TextView
            android:id="@+id/tv_headline_kannada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:text="@string/main_tag_kannada"
            android:textColor="@color/text_dark_navy"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/guideline_center"
            app:layout_constraintBottom_toTopOf="@id/tv_subheading_kannada"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <!-- Kannada Subheading -->
        <TextView
            android:id="@+id/tv_subheading_kannada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:text="@string/sub_tag_kannada"
            android:textColor="@color/text_dark_navy"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_headline_kannada"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Footer -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/powered_by"
            android:textColor="@color/text_subtle"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- DRAWER -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main" />
</androidx.drawerlayout.widget.DrawerLayout>
